fixed whitespace

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -5,7 +5,7 @@ footer{
     color: #000000;
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width: 98%;
 }
 
 
